# Automated-logbook-filler

./: .gitignore  api.py  api2.py  fill.py  logbook_query.py  pyproject.toml  requirements.txt  test.py
