[project]
name = "agentic-logbook-filler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "google-api-python-client>=2.178.0",
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "groq>=0.31.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "phidata>=2.7.10",
    "pymongo>=4.14.1",
    "uvicorn>=0.35.0",
]
